* [bug 1097] Fixed waiting users being removed (thanks stephan hohe)
* [bug 1110] Added new adc hub list (thanks mafa_45)
* [bug 1091] Added new nmdc hub lists (thanks poy)
* [bug 1112] Port sign cleanup (thanks steven sheehy)
* [ADC] Fixed client-to-client connection sequence
* [bug 1064] Updated to YaSSL 1.5.0, should fix crash

-- 0.698 2006-10-10 --
* [bug 1065] Code cleanup (thanks steven sheehy)
* Fixed readme.txt (thanks ullner)
* More code cleanup
* Fixed trusted/untrusted upload view
* Fixed crash on invalid remote command during upload
* [ADC] Improved GFI command support
* Lowest priority downloads are no longer started if there are other downloads running
* Upgraded to STLport 5.0.2
* Updated compile instructions
* Updated unsigned types to C99
* Removed unmaintained autoconf files
* Reworked match listing to make it slightly faster
* Fixed a few random crashes
* [ADC] Removed obsolete DSC command
* Fixed user list not being updated in some cases
* [bug 1071] Added fasthash for unix (thanks steven sheehy)

-- 0.697 2006-09-29 --
* [ADC] Fixed a few protocol issues
* Some code cleanup
* Queue frame fixes and memory saves
* TLS port change without restart fixed
* [bug 1007] Fixed nick character check
* Fixed some transfer view sorting issues
* [bug 59] Added option to match all local lists

-- 0.696 2006-09-22 --
* Fixed a possible deadlock
* [bug 1058] Removed some whitespace (big thanks to pothead)
* Removed the possibility to download files without TTH
* Removed the possibility to read *.DcLst files (no TTH, no i18n support)
* Files with no TTH no longer show up in search and directory listings
* Sources in the queue with no TTH support will no longer appear
* Files without TTH in the queue will be removed (finish downloads with an older version)
* [ADC] Fixed support for uncompressed files.xml as well as proper files.xml.bz2 support
* Some socket code cleanup
* Removed broken nick save code
* Upgraded yaSSL to 1.4.0
* Fixed some SSL connection issues