@@ -121,6 +121,7 @@ public:
 	typedef X<5> UserAdded;
 	typedef X<6> UserRemoved;
 	typedef X<7> StatusChanged;
+	typedef X<8> LoadedFromCache;
 
 	virtual void on(DownloadStarting, const string&) throw() { }
 	virtual void on(DownloadFailed, const string&) throw() { }
@@ -130,6 +131,7 @@ public:
 	virtual void on(UserAdded, const FavoriteUser&) throw() { }
 	virtual void on(UserRemoved, const FavoriteUser&) throw() { }
 	virtual void on(StatusChanged, const User::Ptr&) throw() { }
+	virtual void on(LoadedFromCache, const string&) throw() { }
 };
 
 class SimpleXML;
@@ -147,15 +149,15 @@ public:
 		TYPE_BZIP2
 	};
 	StringList getHubLists();
-	bool setHubList(int /*aHubList*/);
+	void setHubList(int aHubList);
 	int getSelectedHubList() { return lastServer; }
-	void refresh();
+	void refresh(bool forceDownload = false);
 	HubTypes getHubListType() { return listType; }
 	HubEntry::List getPublicHubs() {
 		Lock l(cs);
 		return publicListMatrix[publicListServer];
 	}
-	bool isDownloading() { return running; }
+	bool isDownloading() { return (useHttp && running); }
 
 // Favorite Users
 	typedef HASH_MAP_X(CID, FavoriteUser, CID::Hash, equal_to<CID>, less<CID>) FavoriteMap;
@@ -214,7 +216,7 @@ private:
 	typedef map<string, HubEntry::List> PubListMap;
 	PubListMap publicListMatrix;
 	string publicListServer;
-	bool running;
+	bool useHttp, running;
 	HttpConnection* c;
 	int lastServer;
 	HubTypes listType;
@@ -225,22 +227,8 @@ private:
 
 	friend class Singleton<FavoriteManager>;
 
-	FavoriteManager() : lastId(0), running(false), c(NULL), lastServer(0), listType(TYPE_NORMAL), dontSave(false) {
-		SettingsManager::getInstance()->addListener(this);
-		ClientManager::getInstance()->addListener(this);
-	}
-
-	virtual ~FavoriteManager() throw() {
-		ClientManager::getInstance()->removeListener(this);
-		SettingsManager::getInstance()->removeListener(this);
-		if(c) {
-			c->removeListener(this);
-			delete c;
-			c = NULL;
-		}
-
-		for_each(favoriteHubs.begin(), favoriteHubs.end(), DeleteFunction());
-	}
+	FavoriteManager();
+	virtual ~FavoriteManager() throw();
 
 	FavoriteHubEntry::Iter getFavoriteHub(const string& aServer) {
 		for(FavoriteHubEntry::Iter i = favoriteHubs.begin(); i != favoriteHubs.end(); ++i) {
@@ -266,7 +254,7 @@ private:
 	virtual void on(TypeNormal, HttpConnection*) throw();
 	virtual void on(TypeBZ2, HttpConnection*) throw();
 
-	void onHttpFinished() throw();
+	void onHttpFinished(bool fromHttp) throw();
 
 	// SettingsManagerListener
 	virtual void on(SettingsManagerListener::Load, SimpleXML& xml) throw() {
