@@ -179,6 +179,7 @@ string ResourceManager::strings[] = {
 "Address", 
 "Hub list downloaded...", 
 "Edit the hublist", 
+"Hub list loaded from cache...", 
 "Name", 
 "Hublist", 
 "Hub password", 
@@ -811,6 +812,7 @@ string ResourceManager::names[] = {
 "HubAddress", 
 "HubListDownloaded", 
 "HubListEdit", 
+"HubListLoadedFromCache", 
 "HubName", 
 "HubList", 
 "HubPassword", 
