@@ -182,6 +182,7 @@ enum Strings { // @DontAdd
 	HUB_ADDRESS, // "Address"
 	HUB_LIST_DOWNLOADED, // "Hub list downloaded..."
 	HUB_LIST_EDIT, // "Edit the hublist"
+	HUB_LIST_LOADED_FROM_CACHE, // "Hub list loaded from cache..."
 	HUB_NAME, // "Name"
 	HUB_LIST, // "Hublist"
 	HUB_PASSWORD, // "Hub password"
