@@ -22,6 +22,8 @@
 * [bug 1112] Port sign cleanup (thanks steven sheehy)
 * [ADC] Fixed client-to-client connection sequence
 * [bug 1064] Updated to YaSSL 1.5.0, should fix crash
+* [bug 446] Public hub lists are cached and downloaded only when user requests it (thanks poy)
+* [bug 1117] Fixed subfolders being created on filelist downloads (thanks mikael eman)
 
 -- 0.698 2006-10-10 --
 * [bug 1065] Code cleanup (thanks steven sheehy)
